<resources>
    <string name="instructions">
Place your fingertip on the Home button to verify your identity
</string>
    <string name="app_name">Gravo</string>
    <string name="splash_icon_description">Splash icon xml</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_description">GRAVO is also a platform through which environmental information and educational material can be accessed with ease for all subscribers.</string>
    <string name="gravo_logo_full_desc">Gravo Logo Full</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="login_hint_password">password</string>
    <string name="login_hint_email">Email</string>
    <string name="invalid_login">Invalid Username or Password</string>
    <string name="circle1_description">circle1</string>
    <string name="line1_description">line1</string>
    <string name="circle2_description">circle2</string>
    <string name="line2_description">line2</string>
    <string name="circle3_description">circle3</string>
    <string name="line3_description">line3</string>
    <string name="circle4_description">circle4</string>
</resources>