<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30000000"
    tools:context=".contents.ActivitySelectedTransaction">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        app:navigationIcon="@drawable/ic_arrow_back">

        <TextView
            android:id="@+id/transaction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Details"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#05000000"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvTransaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:padding="5dp"
                    android:text="TRANSACTION #" />

                <LinearLayout
                    android:id="@+id/transaction_details_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:paddingTop="10dp"
                    android:textColor="@color/brand_green"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:weightSum="7">

                    <ImageView
                        android:id="@+id/circle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/circle1_description" />

                    <ImageView
                        android:id="@+id/line1"
                        android:layout_width="100dp"
                        android:layout_height="10dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/line1_description" />

                    <ImageView
                        android:id="@+id/circle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/circle2_description" />

                    <ImageView
                        android:id="@+id/line2"
                        android:layout_width="100dp"
                        android:layout_height="10dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/line2_description" />

                    <ImageView
                        android:id="@+id/circle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/circle3_description" />

                    <ImageView
                        android:id="@+id/line3"
                        android:layout_width="100dp"
                        android:layout_height="10dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/line3_description" />


                    <ImageView
                        android:id="@+id/circle4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/circle4_description" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/transactionchanges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/reschedule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:height="20dp"
                        android:background="@drawable/btn_black_round"
                        android:paddingEnd="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:text="Re-Schedule"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                    <Space
                        android:layout_width="15dp"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:height="20dp"
                        android:background="@drawable/btn_brand_pink_round"
                        android:paddingEnd="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp"
                        android:text="Cancel"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Collection on "
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/date_of_collection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#FFCBD8"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <android.support.v4.widget.Space
                                android:layout_width="20dp"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/tvStatusDetails"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Payment will be made using PayNOW. Get your mobile number ready!"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="DELIVERY DETAILS" />

                <LinearLayout
                    android:id="@+id/billing_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvBillingName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_bold"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="EMAIL" />

                    <TextView
                        android:id="@+id/tvBillingEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="CONTACT NUMBER" />

                    <TextView
                        android:id="@+id/tvBillingContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quicksand_bold"
                            android:text="REMARKS"
                            android:textColor="@color/black"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"/>
                        <TextView
                            android:id="@+id/tv_edit_remarks"
                            android:padding="5dp"
                            android:background="@drawable/btn_brand_pink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quicksand_bold"
                            android:text="Edit Remarks"
                            android:textColor="@color/white"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>


                    <TextView
                        android:id="@+id/tvRemarks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="DELIVERY ADDRESS" />

                    <TextView
                        android:id="@+id/tvBillingAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />






                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/weightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="TOTAL WEIGHT/QTY" />

                <TextView
                    android:id="@+id/priceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/weightLabel"
                    android:text="TOTAL PRICE" />

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="N/A"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/tvWeight"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="$0.00"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.wang.avi.AVLoadingIndicatorView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:indicatorColor="@color/brand_green"
            app:indicatorName="BallClipRotateMultipleIndicator" />

    </LinearLayout>
</RelativeLayout>